# mcptest

./: README.md  main.py  pyproject.toml
src/deployment/: __init__.py  __main__.py
